**
** Official Forums: http://www.manground.org/forum/
** GoogleCode Website: http://code.google.com/p/mangadmin/
** Subversion Repository: http://mangadmin.googlecode.com/svn/
**
**    Please report bugs:  http://code.google.com/p/mangadmin/issues/list
**
************************************************************************************************************/

=CHANGELOG= 
Rev. 79:
  * fixed: bug with code which was accidently uncommented
  * fixed: error with translations
  * updated: spanish language file, patch provided by gorrister
  
Rev. 78:
  * fix: readded AceOO

Rev. 77:
  BUGFIX PART 2
  * updated some libraries and the TODO list
  * fixed: TOC informations
  * fixed: ticket system should work, please test and report, I don't have problems with it!
  * added: instant kill enemy creature on click mode
  * added: revive button when player dies
  * added: MangAdmin.wowproj and MangAdmin.wowsln, these are project files for the 
    Addon Studio for World of Warcraft, found here: http://www.codeplex.com/WarcraftAddOnStudio/
    TODO: Add some remaining files to the file tree
  * added: really simple MiniMenu (little window/taskbar for MangAdmin), I need your feedback on this
  * if your have problems/bugs try to delete MangAdmin related files from your WTF folder

Rev. 76:
  BUGFIX PART 1
  * fixed: correct address in file headers
  * fixed: TOC interface version
  * fixed: infobox right (adjusted hook strings), part of patch by panaut0lordv
  * fixed: all UIDropDown selectboxes
  * changed design of the character section, 
  now when changing your target the buttons will get disabled/enabled to show what you can do

Rev. 75:
  * fixed: typo in file headers
  * fixed: you must click the inputbox to be able to type something into it, press ESC to remove the focus
  * fixed: log scrollbuttons now work when they are pushed, also increased scroll speed
  * fixed: show correct link color of MangLinkifier in all circumstances (better RGB2Hex function)