@@ -175,8 +175,7 @@ function Return_fiFI()
     ["Gnomish"] = "Gnomish",
     ["Troll"] = "Troll",
     ["Gutterspeak"] = "Gutterspeak",
-    ["Gutterspeak"] = true,
-    ["Draenei"] = true,
+    ["Draenei"] = "Draenei",
     ["ma_NoFavorites"] = "There are currently no saved favorites!",
     ["ma_NoZones"] = "No zones!",
     ["ma_NoSubZones"] = "No subzones!",
